<resources>
    <string name="app_name">PupusasYaProjectPup</string>
    <string name="hintLoginUsu">Usuario</string>
    <string name="hintLogContr">Contraseña</string>
    <string name="etNames">Nombres</string>
    <string name="etLastNames">Apellidos</string>
    <string name="etEmail">Email (Opcional)</string>
    <string name="etAddress">Dirección</string>
    <string name="etPassword">Contraseña</string>
    <string name="etConfPassword">Confirmar Contraseña</string>
    <string name="btnSignUp">Registrarme</string>
    <string name="btnClientes">CLIENTES</string>
    <string name="btnPupuseria">PUPUSERIAS</string>
    <string name="etUserName">Nombre de Usuario</string>
    <string name="tvSignUp">Registrarse</string>
    <string name="tvSignIn">Iniciar Sesión</string>
    <string name="etCellPhone">Celular</string>
    <string name="userName">Nombre de Usuario</string>
    <string name="etPhone">Teléfono (Opcional)</string>
    <string name="etPupuseriaName">Nombre Pupusería</string>
    <string name="agregar_produtos">agregar produtos</string>
    <string name="perfil">PERFIL</string>
    <string name="menu">Menu</string>
    <string name="nuevo_producto">NUEVO PRODUCTO</string>
    <string name="pupuseria">Pupuseria</string>
    <string name="tipoproducto">tipoProducto</string>
    <string name="nombreproducto">Nombre</string>
    <string name="precio">Precio</string>
    <string name="guardar">GUARDAR</string>
    <string name="direccion">Direccion</string>
    <string name="nombre">Nombre</string>
    <string name="nombredireccion">NombreDireccion</string>
    <string name="telefono">Telefono</string>
    <string name="nombretelefono">NombreTelefono</string>
    <string name="celular">Celular</string>
    <string name="nombrecelular">NombreCelular</string>
    <string name="email">Email</string>
    <string name="editar">Editar</string>
    <string name="codigo">Codigo</string>
    <string name="codigo_de_la_pupuseria">Codigo de la Pupuseria</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="actualizar">Actualizar</string>
    <string name="seleccionar_imagen">SELECCIONAR IMAGEN</string>
    <string name="producto">Producto</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="btnClientes1">CLIENTES</string>
    <string name="tv1">CLIENTES</string>
    <string name="App_name">Intent</string>
    <string name="btnPupuserias1">PUPUSERIAS</string>
    <string name="tv2">PUPUSERIAS</string>

</resources>
