<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" android:background="@color/colorDarkGray">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SignUpCli"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvSignUp"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:id="@+id/etNames"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etNames"
                    android:inputType="textAutoComplete"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    />

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etLastNames"
                    android:inputType="textAutoComplete"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etLastNames"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"
                    android:inputType="text"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etUserName"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etEmail"
                    android:inputType="textEmailAddress"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etEmail"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etPhone"
                    android:inputType="number"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etPhone"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <MultiAutoCompleteTextView
                    android:layout_width="300dp"
                    android:layout_height="89dp"
                    android:hint="@string/etAddress"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etAddress2"
                    android:gravity="center"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etPassword"
                    android:inputType="textPassword"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etPassword"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etConfPassword"
                    android:inputType="textPassword"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etConfPassword"/>

                <Button
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSignUp"
                    android:id="@+id/btnSignUp"
                    android:background="@drawable/button_rounded"
                    android:layout_marginTop="20dp" android:layout_marginBottom="20dp"
                    android:onClick="Save"
                    android:textColor="@color/colorWhite"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</ScrollView>