<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" android:background="@color/colorDarkBlue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SignUp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvSignUp"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorDarkGray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:id="@+id/etNames"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etPupuseriaName"
                    android:inputType="textAutoComplete"
                    android:gravity="center"
                    android:layout_marginTop="20dp" android:textColorHint="@color/colorWhite"
                    />


                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"
                    android:inputType="text"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etUserName" android:textColorHint="@color/colorWhite"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etEmail"
                    android:inputType="textEmailAddress"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etEmail" android:textColorHint="@color/colorWhite"/>


                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etPhone"
                    android:inputType="phone"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etPhone" android:textColorHint="@color/colorWhite"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etCellPhone"
                    android:inputType="phone"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etCellPhone" android:textColorHint="@color/colorWhite"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <MultiAutoCompleteTextView
                    android:id="@+id/etAddress2"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:hint="@string/etAddress"
                    android:textColorHint="@color/colorWhite" />

                <ImageView
                    android:id="@+id/foto"
                    android:layout_width="325dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="68dp" />

                <Button
                    android:id="@+id/btnimagen"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_rounded"
                    android:onClick="imagen"
                    android:text="@string/seleccionar_imagen"
                    android:textColor="@color/colorWhite" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:hint="@string/etPassword"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorWhite" />

                <EditText
                    android:id="@+id/etConfPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:hint="@string/etConfPassword"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorWhite" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_rounded"
                    android:onClick="Save"
                    android:text="@string/btnSignUp"
                    android:textColor="@color/colorWhite" />

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</ScrollView>