<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre"
            android:id="@+id/tvMessage"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/bnproduto"
            android:layout_width="149dp"
            android:layout_height="133dp"
            android:drawableTop="@drawable/ic_add_circle"
            android:text="@string/agregar_produtos"
            android:onClick="producto"
            >

        </Button>

        <Button
            android:id="@+id/bnperfil"
            android:layout_width="149dp"
            android:layout_height="133dp"
            android:drawableTop="@drawable/ic_portrait"
            android:onClick="perfil"
            android:text="@string/perfil"
            >

        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/bnmenu"
            android:layout_width="148dp"
            android:layout_height="133dp"
            android:onClick="Menu"
            android:text="@string/menu"
            android:drawableTop="@drawable/ic_content_paste"
            >

        </Button>

        <Button
            android:id="@+id/bncerrar"
            android:layout_width="148dp"
            android:layout_height="133dp"
            android:onClick="cerrarsesion"
            android:text="@string/cerrar_sesion"
            android:drawableTop="@drawable/ic_content_paste"
            >

        </Button>

    </LinearLayout>
</LinearLayout>

