<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" android:background="@color/colorDarkBlue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SignUp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/perfil"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorDarkGray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvpupuseria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pupuseria"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDarkGray"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nombre"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDarkGray"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvdireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/direccion"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDarkGray"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/etnombredireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nombredireccion"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDarkGray"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvtelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/telefono"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDarkGray"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/etnombretelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nombretelefono"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDarkGray"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvcelular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/celular"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDarkGray"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/etnombrecelular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nombrecelular"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDarkGray"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDarkGray"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/etnombreemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="NombreEmael"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDarkGray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/editar"
                    android:id="@+id/btnEditar"
                    android:background="@drawable/button_rounded"
                    android:layout_marginTop="20dp" android:layout_marginBottom="20dp"
                    android:textColor="@color/colorWhite"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</ScrollView>