<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" android:background="@color/colorDarkBlue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SignUp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreproducto"
                    android:inputType="text"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etNombre" android:textColorHint="@color/colorWhite"/>


                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etPrecio" android:textColorHint="@color/colorWhite"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"
            android:id="@+id/btnEditar2"
            android:background="@drawable/button_rounded"
            android:onClick="Save2"
            android:layout_marginTop="20dp" android:layout_marginBottom="20dp"
            android:textColor="@color/colorWhite"/>

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/eliminar"
                    android:id="@+id/btnEliminar"
                    android:background="@drawable/button_rounded"
                    android:onClick="elinimar"
                    android:layout_marginTop="20dp" android:layout_marginBottom="20dp"
                    android:textColor="@color/colorWhite"/>

        </LinearLayout>

        </LinearLayout>

    </ScrollView>
</ScrollView>