<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" android:background="@color/colorDarkBlue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SignUp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nuevo_producto"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorDarkGray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvpupuseria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Pupuseria"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorDarkGray"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <Spinner
                    android:id="@+id/SpTipo"
                    android:layout_width="300dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:hint="@string/tipoproducto"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreproducto"
                    android:inputType="text"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etNombre" android:textColorHint="@color/colorWhite"/>


                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/etPrecio" android:textColorHint="@color/colorWhite"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar"
                    android:id="@+id/btnNuevoProducto"
                    android:background="@drawable/button_rounded"
                    android:onClick="Save"
                    android:layout_marginTop="20dp" android:layout_marginBottom="20dp"
                    android:textColor="@color/colorWhite"/>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</ScrollView>